Esempio18efs/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Description: AWS CloudFormation Examples by AlNao - 18 EFS - template che crea un EFS e una istanze Ec2 che monta il volume EFS

#SEE
# https://computingforgeeks.com/create-aws-efs-filesystem-with-cloudformation/
# https://github.com/1Strategy/efs-starter-template
# https://github.com/1Strategy/efs-starter-template/blob/master/efs.yaml

Parameters:
  SubnetId:
    Description: 'Please choose a Subnet Id'
    Type: AWS::EC2::Subnet::Id
    ConstraintDescription: must be the id of an existing Subnet.
  VpcId:
    Description: Id of Vpc
    Type: AWS::EC2::VPC::Id
    ConstraintDescription: must be the id of an existing VPC
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues: [t2.nano, t2.micro, t2.small, t2.medium, t2.large, t2.xlarge, t2.2xlarge] 
    ConstraintDescription: must be a valid EC2 instance type.
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
#  LatestAmiId:
#    Type:  'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
#    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
Resources:

  SecurityGroupEC2toEFS:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VpcId #  !GetAtt VPC.Outputs.VPC
      GroupDescription: 'Web Server security group'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80' 
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref SSHLocation
      Tags:
        - Key: "Name"
          Value: !Ref AWS::StackName 
  EFS:
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL: "./efs.yaml"
      Parameters:
        FileSystemName: !Ref AWS::StackName
        VpcId: !Ref VpcId # !GetAtt VPC.Outputs.VPC
        MountTarget1Subnet: !Ref SubnetId # !GetAtt VPC.Outputs.PublicSubnet1
        #MountTarget2Subnet: !GetAtt VPC.Outputs.PrivateSubnet1
        #MountTarget3Subnet: !GetAtt VPC.Outputs.PrivateSubnet2
        OriginSecurityGroup: !Ref SecurityGroupEC2toEFS

  EC2:
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL: "./ec2WithMount.yaml"
      Parameters:
        SubnetId: !Ref SubnetId #!GetAtt VPC.Outputs.PublicSubnet1
        VpcId: !Ref VpcId
        KeyName: !Ref KeyName
        InstanceType: !Ref InstanceType
        SSHLocation: !Ref SSHLocation        
        EFSFileSystemId: !GetAtt EFS.Outputs.FileSystemId
        SecurityGroupGlobal: !Ref SecurityGroupEC2toEFS
#        LatestAmiId: !Ref LatestAmiId

#  VPC:
#    Type: AWS::CloudFormation::Stack
#    Properties:
#      TemplateURL: https://s3.amazonaws.com/ecs-refarch-cloudformation/infrastructure/vpc.yaml
#      Parameters:
#        EnvironmentName: !Ref AWS::StackName #usato come tag per le risorse
#        VpcCIDR: !Ref CidrBlockVPC 
#        PublicSubnet1CIDR: !Ref CidrBlockSubnetA
#        PublicSubnet2CIDR: !Ref CidrBlockSubnetB
#        PrivateSubnet1CIDR: !Ref CidrBlockSubnetC
#        PrivateSubnet2CIDR: !Ref CidrBlockSubnetD
#  VPNendpoint:
#    Type: AWS::CloudFormation::Stack
#    Properties:
#      TemplateURL: "../Esempio22vpnEndpoint/vpnendpoint.yaml"
#      Parameters:
#        VPCid: !GetAtt VPC.Outputs.VPC
#        SAMLProviderArn: !Ref SAMLProviderArn
#        SelfServiceSAMLProviderArn: !Ref SelfServiceSAMLProviderArn
#        CidrBlockVPC: !Ref CidrBlockVPC
#        CidrBlockVPCclient: !Ref CidrBlockVPCclient
#        ServerCertificateArn: !Ref ServerCertificateArn
#        SSHLocation: !Ref SSHLocation
#        DnsServers: !Ref DnsServers
#        PrivateSubnet1: !GetAtt VPC.Outputs.PrivateSubnet1
#        PrivateSubnet2: !GetAtt VPC.Outputs.PrivateSubnet2


Outputs:
  StackName:
    Description: Deployed StackName for update
    Value: !Ref AWS::StackName
  EFSFileSystemId:
    Description: EFS name
    Value: !GetAtt EFS.Outputs.FileSystemId
  WebsiteURL:
    Description: Deployed StackName for update
    Value: !GetAtt EC2.Outputs.WebsiteURL
  InstanceIPAddress: #https://github.com/awslabs/aws-cloudformation-templates/blob/master/aws/services/EC2/EIP_With_Association.yaml
    Description: EC2 Instance IP Address
    Value: !GetAtt EC2.Outputs.InstanceIPAddress
